Added data handling notebook

--- a/experiments/lake_experiment.ipynb
+++ b/experiments/lake_experiment.ipynb
@@ -33,16 +33,13 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "import json\n",
-    "from pathlib import Path\n",
-    "from typing import *\n",
+    "import os\n",
+    "from typing import Dict\n",
     "\n",
+    "import boto3\n",
     "import pandas as pd\n",
     "from incense.artifact import Artifact, content_type_to_artifact_cls\n",
     "from pyrsistent import freeze, thaw\n",
-    "import boto3\n",
-    "import os\n",
-    "\n",
     "from text_discovery.s3_utils import S3File, s3_join"
    ]
   },
@@ -54,12 +51,12 @@
    "source": [
     "# export\n",
     "file_to_mime_type_map = {\n",
-    "    '.txt': 'text/csv',\n",
-    "    '.csv': 'text/csv',\n",
-    "    '.png': 'image/png',\n",
-    "    '.jpg': 'image/jpeg',\n",
-    "    '.mp4': 'video/mp4',\n",
-    "    '.pickle': 'application/octet-stream',\n",
+    "    \".txt\": \"text/csv\",\n",
+    "    \".csv\": \"text/csv\",\n",
+    "    \".png\": \"image/png\",\n",
+    "    \".jpg\": \"image/jpeg\",\n",
+    "    \".mp4\": \"video/mp4\",\n",
+    "    \".pickle\": \"application/octet-stream\",\n",
     "}"
    ]
   },
@@ -81,7 +78,7 @@
     "        self.metrics_dir = s3_join(self.project_dir, \"metrics\", str(experiment_id))\n",
     "        self.artifacts_dir = s3_join(self.project_dir, \"artifacts\", str(experiment_id))\n",
     "        self._data = freeze(data)\n",
-    "        self.s3 = boto3.client('s3')\n",
+    "        self.s3 = boto3.client(\"s3\")\n",
     "        self.artifacts = self._load_artifacts()\n",
     "        self.metrics = self._load_metrics()\n",
     "\n",
@@ -97,12 +94,16 @@
     "\n",
     "    def _load_artifacts(self) -> Dict[str, Artifact]:\n",
     "        artifacts = {}\n",
-    "        s3 = boto3.resource('s3')\n",
+    "        s3 = boto3.resource(\"s3\")\n",
     "        bucket = s3.Bucket(self.bucket_name)\n",
-    "        \n",
-    "        artifacts_key_prefix = s3_join(self.project_name, \"artifacts\", str(self.experiment_id))\n",
-    "        artifact_keys = [obj.key for obj in bucket.objects.filter(Prefix=artifacts_key_prefix)]\n",
-    "        \n",
+    "\n",
+    "        artifacts_key_prefix = s3_join(\n",
+    "            self.project_name, \"artifacts\", str(self.experiment_id)\n",
+    "        )\n",
+    "        artifact_keys = [\n",
+    "            obj.key for obj in bucket.objects.filter(Prefix=artifacts_key_prefix)\n",
+    "        ]\n",
+    "\n",
     "        for artifact_key in artifact_keys:\n",
     "            s3_object = s3.Object(bucket_name=self.bucket_name, key=artifact_key)\n",
     "            artifact_file = S3File(s3_object)\n",
@@ -111,7 +112,9 @@
     "            try:\n",
     "                content_type = file_to_mime_type_map[os.path.splitext(name)[-1]]\n",
     "                artifact_type = content_type_to_artifact_cls[content_type]\n",
-    "                artifacts[name] = artifact_type(name, artifact_file, content_type=content_type)\n",
+    "                artifacts[name] = artifact_type(\n",
+    "                    name, artifact_file, content_type=content_type\n",
+    "                )\n",
     "            except KeyError:\n",
     "                artifact_type = Artifact\n",
     "                artifacts[name] = artifact_type(name, artifact_file)\n",
@@ -119,15 +122,15 @@
     "        return artifacts\n",
     "\n",
     "    def _load_metrics(self) -> Dict[str, pd.Series]:\n",
-    "        metrics_path = f's3://{self.metrics_dir}/metrics.csv'\n",
+    "        metrics_path = f\"s3://{self.metrics_dir}/metrics.csv\"\n",
     "        return pd.read_csv(metrics_path)\n",
     "\n",
     "    def delete(self, confirmed: bool = False):\n",
     "        raise NotImplementedError\n",
-    "            \n",
+    "\n",
     "    def _delete(self):\n",
     "        raise NotImplementedError\n",
-    "        \n",
+    "\n",
     "    def _delete_metrics(self):\n",
     "        raise NotImplementedError\n",
     "\n",
