--- a/experiments/lake_experiment_loader.ipynb
+++ b/experiments/lake_experiment_loader.ipynb
@@ -45,16 +45,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from incense.experiment import Experiment\n",
-    "from incense.artifact import CSVArtifact\n",
-    "from typing import Tuple\n",
-    "import boto3\n",
-    "import os\n",
     "import json\n",
+    "import os\n",
+    "from functools import lru_cache\n",
+    "from typing import Tuple\n",
+    "\n",
+    "import pandas as pd\n",
+    "from incense.artifact import CSVArtifact\n",
+    "from incense.experiment import Experiment\n",
     "from text_discovery.lake_experiment import LakeExperiment\n",
-    "from functools import _lru_cache_wrapper, lru_cache\n",
-    "from tinydb import TinyDB, Query\n",
+    "from tinydb import Query, TinyDB\n",
     "from tinydb.storages import MemoryStorage\n",
     "from turbodbc.exceptions import DatabaseError"
    ]
@@ -100,10 +100,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bucket_name = 's3bawspprwe1chatbotunpub01'\n",
-    "project_dir = 'discovery/experiments/lake_test'\n",
-    "experiments_dir = 'discovery/experiments'\n",
-    "experiment_name = 'lake_test'\n",
+    "bucket_name = \"s3bawspprwe1chatbotunpub01\"\n",
+    "project_dir = \"discovery/experiments/lake_test\"\n",
+    "experiments_dir = \"discovery/experiments\"\n",
+    "experiment_name = \"lake_test\"\n",
     "table_context = '\"chatbot_unpublish_s3\".discovery.experiments'"
    ]
   },
@@ -115,72 +115,89 @@
    "source": [
     "# export\n",
     "class LakeExperimentLoader:\n",
-    "    def __init__(self, dremio_access, table_context, bucket_name, \n",
-    "                 experiments_dir, experiment_name):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        dremio_access,\n",
+    "        table_context,\n",
+    "        bucket_name,\n",
+    "        experiments_dir,\n",
+    "        experiment_name,\n",
+    "    ):\n",
     "        self.dremio_access = dremio_access\n",
     "        self.table_context = table_context\n",
     "        self.bucket_name = bucket_name\n",
     "        self.experiments_dir = experiments_dir\n",
     "        self.experiment_name = experiment_name\n",
-    "        \n",
+    "\n",
     "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
-    "    def _find(self, experiment_name = None, experiment_ids = None, \n",
-    "              experiment_id: int = None, order_by: str = None, \n",
-    "              limit: int = None) -> Experiment:\n",
+    "    def _find(\n",
+    "        self,\n",
+    "        experiment_name=None,\n",
+    "        experiment_ids=None,\n",
+    "        experiment_id: int = None,\n",
+    "        order_by: str = None,\n",
+    "        limit: int = None,\n",
+    "    ) -> Experiment:\n",
     "        if experiment_name is None:\n",
     "            experiment_name = self.experiment_name\n",
-    "        query = f'select * from {self.table_context}.{experiment_name}.runs'\n",
+    "        query = f\"select * from {self.table_context}.{experiment_name}.runs\"\n",
     "        if experiment_ids:\n",
-    "            ids = ', '.join([str(i) for i in experiment_ids])\n",
-    "            query += f' where dir0 IN ({ids})'\n",
+    "            ids = \", \".join([str(i) for i in experiment_ids])\n",
+    "            query += f\" where dir0 IN ({ids})\"\n",
     "        if experiment_id:\n",
-    "            query += f' where dir0 = {experiment_id}'\n",
-    "        if order_by: \n",
-    "            query += f' order by {order_by} desc'\n",
-    "        if limit: \n",
-    "            query += f' limit {limit}'\n",
+    "            query += f\" where dir0 = {experiment_id}\"\n",
+    "        if order_by:\n",
+    "            query += f\" order by {order_by} desc\"\n",
+    "        if limit:\n",
+    "            query += f\" limit {limit}\"\n",
     "        data = dremio_access.read_sql_to_dataframe(query)\n",
-    "        experiments = [LakeExperiment(self.bucket_name, self.experiments_dir, \n",
-    "                                    experiment_name, ex_id, \n",
-    "                                    data.iloc[i,:].to_dict()) for i, ex_id in \n",
-    "                       enumerate(data.dir0.tolist())]\n",
+    "        experiments = [\n",
+    "            LakeExperiment(\n",
+    "                self.bucket_name,\n",
+    "                self.experiments_dir,\n",
+    "                experiment_name,\n",
+    "                ex_id,\n",
+    "                data.iloc[i, :].to_dict(),\n",
+    "            )\n",
+    "            for i, ex_id in enumerate(data.dir0.tolist())\n",
+    "        ]\n",
     "        return experiments\n",
-    "    \n",
+    "\n",
     "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_by_id(self, experiment_id):\n",
     "        experiments = self._find(experiment_id=experiment_id)\n",
     "        return None if len(experiments) == 0 else experiments[0]\n",
-    "    \n",
+    "\n",
     "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_by_ids(self, experiment_ids: Tuple[int]):\n",
     "        if len(experiment_ids) == 1:\n",
-    "            raise ValueError('Use find_by_id for a single experiment')\n",
+    "            raise ValueError(\"Use find_by_id for a single experiment\")\n",
     "        return self._find(experiment_ids=experiment_ids)\n",
-    "    \n",
+    "\n",
     "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_latest(self, n=5):\n",
-    "        return self._find(order_by='dir0', limit=n)\n",
-    "    \n",
+    "        return self._find(order_by=\"dir0\", limit=n)\n",
+    "\n",
     "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_all(self):\n",
     "        return self._find()\n",
-    "    \n",
+    "\n",
     "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_by_name(self, experiment_name):\n",
     "        result = None\n",
     "        try:\n",
     "            result = self._find(experiment_name=experiment_name)\n",
-    "        except PermissionError as pe:\n",
-    "            print(f'File not found or access not granted; check path information')\n",
+    "        except PermissionError:\n",
+    "            print(f\"File not found or access not granted; check path information\")\n",
     "        return result\n",
-    "    \n",
+    "\n",
     "    def insert_docs(self, db, prop_name):\n",
     "        experiments = self.find_all()\n",
     "        for ex in experiments:\n",
     "            document = json.loads(ex._data[prop_name])\n",
-    "            document['experiment_id'] = ex.experiment_id\n",
+    "            document[\"experiment_id\"] = ex.experiment_id\n",
     "            db.insert(document)\n",
-    "        \n",
+    "\n",
     "    def find_by_key(self, prop_name, key, value):\n",
     "        db = TinyDB(storage=MemoryStorage)\n",
     "        self.insert_docs(db, prop_name)\n",
@@ -189,12 +206,12 @@
     "        if len(docs) == 0:\n",
     "            return None\n",
     "        if len(docs) == 1:\n",
-    "            return self.find_by_id(docs[0]['experiment_id'])\n",
-    "        return self.find_by_ids(tuple(d['experiment_id'] for d in docs))\n",
+    "            return self.find_by_id(docs[0][\"experiment_id\"])\n",
+    "        return self.find_by_ids(tuple(d[\"experiment_id\"] for d in docs))\n",
     "\n",
     "    def find_by_config_key(self, key, value):\n",
-    "        return self.find_by_key('config', key, value)\n",
-    "    \n",
+    "        return self.find_by_key(\"config\", key, value)\n",
+    "\n",
     "    def cache_clear(self):\n",
     "        \"\"\"Clear all caches of all find functions.\n",
     "        Useful when you want to see the updates to your database.\"\"\"\n",
@@ -212,8 +229,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = LakeExperimentLoader(dremio_access, table_context, \n",
-    "                              bucket_name, experiments_dir, experiment_name)"
+    "loader = LakeExperimentLoader(\n",
+    "    dremio_access, table_context, bucket_name, experiments_dir, experiment_name\n",
+    ")"
    ]
   },
   {
@@ -223,10 +241,10 @@
    "outputs": [],
    "source": [
     "ex1 = loader.find_by_id(1)\n",
-    "assert(len(ex1.metrics) == 3)\n",
-    "assert(type(ex1.metrics) == pd.DataFrame)\n",
-    "assert(len(ex1.artifacts.values()) == 2)\n",
-    "assert(all([type(art) == CSVArtifact for art in ex1.artifacts.values()]))"
+    "assert len(ex1.metrics) == 3\n",
+    "assert type(ex1.metrics) == pd.DataFrame\n",
+    "assert len(ex1.artifacts.values()) == 2\n",
+    "assert all([type(art) == CSVArtifact for art in ex1.artifacts.values()])"
    ]
   },
   {
@@ -240,8 +258,8 @@
     "    exs = loader.find_by_ids(ex_ids)\n",
     "except ValueError:\n",
     "    pass\n",
-    "ex_ids = (1,3)\n",
-    "assert(len(loader.find_by_ids(ex_ids)) == 2)"
+    "ex_ids = (1, 3)\n",
+    "assert len(loader.find_by_ids(ex_ids)) == 2"
    ]
   },
   {
@@ -250,8 +268,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert([int(ex.experiment_id) for ex in loader.find_latest()] == [3,2,1])\n",
-    "assert([int(ex.experiment_id) for ex in loader.find_latest(n=2)] == [3,2])"
+    "assert [int(ex.experiment_id) for ex in loader.find_latest()] == [3, 2, 1]\n",
+    "assert [int(ex.experiment_id) for ex in loader.find_latest(n=2)] == [3, 2]"
    ]
   },
   {
@@ -260,8 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(len(loader.find_all()) == 3)\n",
-    "assert(sorted([int(ex.experiment_id) for ex in loader.find_all()]) == [1,2,3])"
+    "assert len(loader.find_all()) == 3\n",
+    "assert sorted([int(ex.experiment_id) for ex in loader.find_all()]) == [1, 2, 3]"
    ]
   },
   {
@@ -279,7 +297,7 @@
     }
    ],
    "source": [
-    "%time assert(len(loader.find_all()) == 3)"
+    "%time assert len(loader.find_all()) == 3"
    ]
   },
   {
@@ -306,7 +324,7 @@
     }
    ],
    "source": [
-    "%time assert(len(loader.find_all()) == 3)"
+    "%time assert len(loader.find_all()) == 3"
    ]
   },
   {
@@ -338,9 +356,9 @@
    ],
    "source": [
     "try:\n",
-    "    assert(len(loader.find_by_name('laketest')) is None)\n",
-    "except DatabaseError as de:\n",
-    "    print('Table not found')"
+    "    assert len(loader.find_by_name(\"laketest\")) is None\n",
+    "except DatabaseError:\n",
+    "    print(\"Table not found\")"
    ]
   },
   {
@@ -349,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(len(loader.find_by_name('lake_test')) == 3)"
+    "assert len(loader.find_by_name(\"lake_test\")) == 3"
    ]
   },
   {
@@ -358,8 +376,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(len(loader.find_by_config_key('recipient', 'world')) == 3)\n",
-    "assert(loader.find_by_config_key('recipient', 'hello') is None)"
+    "assert len(loader.find_by_config_key(\"recipient\", \"world\")) == 3\n",
+    "assert loader.find_by_config_key(\"recipient\", \"hello\") is None"
    ]
   },
   {
@@ -368,8 +386,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(len(loader.find_by_key('experiment', 'mainfile', 'ex_test.py')) == 3)\n",
-    "assert(loader.find_by_key('experiment', 'mainfile', 'extest.py') is None)"
+    "assert len(loader.find_by_key(\"experiment\", \"mainfile\", \"ex_test.py\")) == 3\n",
+    "assert loader.find_by_key(\"experiment\", \"mainfile\", \"extest.py\") is None"
    ]
   },
   {
