--- a/experiments/lake_observer.ipynb
+++ b/experiments/lake_observer.ipynb
@@ -42,20 +42,17 @@
     "import json\n",
     "import os\n",
     "import os.path\n",
-    "import pandas as pd\n",
+    "import re\n",
     "\n",
+    "import boto3\n",
+    "import pandas as pd\n",
     "from sacred.commandline_options import cli_option\n",
     "from sacred.dependencies import get_digest\n",
     "from sacred.observers.base import RunObserver\n",
     "from sacred.serializer import flatten\n",
-    "import re\n",
-    "import socket\n",
-    "from text_discovery.s3_utils import (s3_join,\n",
-    "                                     is_valid_bucket, \n",
-    "                                     list_s3_subdirs, \n",
-    "                                     objects_exist_in_dir,\n",
-    "                                     delete_dir)\n",
-    "import boto3"
+    "from text_discovery.s3_utils import (delete_dir, is_valid_bucket,\n",
+    "                                     list_s3_subdirs, objects_exist_in_dir,\n",
+    "                                     s3_join)"
    ]
   },
   {
@@ -79,11 +76,7 @@
     "    VERSION = \"AWSLakeObserver-0.1.0\"\n",
     "\n",
     "    def __init__(\n",
-    "        self,\n",
-    "        bucket_name,\n",
-    "        experiment_dir,\n",
-    "        priority=DEFAULT_S3_PRIORITY,\n",
-    "        region=None,\n",
+    "        self, bucket_name, experiment_dir, priority=DEFAULT_S3_PRIORITY, region=None,\n",
     "    ):\n",
     "        \"\"\"Constructor for a AWSLakeObserver object.\n",
     "\n",
@@ -136,19 +129,19 @@
     "                    \"You must either pass in an AWS region name, or have a \"\n",
     "                    \"region name specified in your AWS config file\"\n",
     "                )\n",
-    "                \n",
+    "\n",
     "    def put_data(self, key, binary_data):\n",
     "        self.s3.Object(self.bucket_name, key).put(Body=binary_data)\n",
     "\n",
     "    def save_json(self, table_dir, obj, filename):\n",
     "        key = s3_join(table_dir, filename)\n",
     "        self.put_data(key, json.dumps(flatten(obj), sort_keys=True, indent=2))\n",
-    "        \n",
+    "\n",
     "    def save_file(self, file_save_dir, filename, target_name=None):\n",
     "        target_name = target_name or os.path.basename(filename)\n",
     "        key = s3_join(file_save_dir, target_name)\n",
     "        self.put_data(key, open(filename, \"rb\"))\n",
-    "    \n",
+    "\n",
     "    def save_sources(self, ex_info):\n",
     "        base_dir = ex_info[\"base_dir\"]\n",
     "        source_info = []\n",
@@ -157,7 +150,7 @@
     "            store_path, md5sum = self.find_or_save(abspath, self.source_dir)\n",
     "            source_info.append([s, os.path.relpath(store_path, self.experiment_dir)])\n",
     "        return source_info\n",
-    "    \n",
+    "\n",
     "    def find_or_save(self, filename, store_dir):\n",
     "        source_name, ext = os.path.splitext(os.path.basename(filename))\n",
     "        md5sum = get_digest(filename)\n",
@@ -166,17 +159,16 @@
     "        if len(list_s3_subdirs(self.s3, self.bucket_name, prefix=store_path)) == 0:\n",
     "            self.save_file(self.source_dir, filename, store_path)\n",
     "        return store_path, md5sum\n",
-    "    \n",
+    "\n",
     "    def _determine_run_dir(self, _id):\n",
     "        if _id is None:\n",
-    "            path_subdirs = list_s3_subdirs(self.s3, self.bucket_name, \n",
-    "                                           s3_join(self.experiment_dir, \"runs\"))\n",
+    "            path_subdirs = list_s3_subdirs(\n",
+    "                self.s3, self.bucket_name, s3_join(self.experiment_dir, \"runs\")\n",
+    "            )\n",
     "            if not path_subdirs:\n",
     "                max_run_id = 0\n",
     "            else:\n",
-    "                integer_directories = [\n",
-    "                    int(d) for d in path_subdirs if d.isdigit()\n",
-    "                ]\n",
+    "                integer_directories = [int(d) for d in path_subdirs if d.isdigit()]\n",
     "                if not integer_directories:\n",
     "                    max_run_id = 0\n",
     "                else:\n",
@@ -191,12 +183,19 @@
     "        self.artifacts_dir = s3_join(self.experiment_dir, \"artifacts\", str(_id))\n",
     "        self.resource_dir = s3_join(self.experiment_dir, \"resources\", str(_id))\n",
     "        self.source_dir = s3_join(self.experiment_dir, \"sources\", str(_id))\n",
-    "        \n",
-    "        self.dirs = (self.runs_dir, self.metrics_dir, self.artifacts_dir,\n",
-    "                    self.resource_dir, self.source_dir)\n",
+    "\n",
+    "        self.dirs = (\n",
+    "            self.runs_dir,\n",
+    "            self.metrics_dir,\n",
+    "            self.artifacts_dir,\n",
+    "            self.resource_dir,\n",
+    "            self.source_dir,\n",
+    "        )\n",
     "        for dir_to_check in self.dirs:\n",
     "            if objects_exist_in_dir(self.s3, self.bucket_name, dir_to_check):\n",
-    "                raise FileExistsError(\"S3 dir at {} already exists\".format(self.runs_dir))\n",
+    "                raise FileExistsError(\n",
+    "                    \"S3 dir at {} already exists\".format(self.runs_dir)\n",
+    "                )\n",
     "\n",
     "        return _id\n",
     "\n",
@@ -225,7 +224,7 @@
     "    ):\n",
     "        _id = self._determine_run_dir(_id)\n",
     "        self.experiment_id = _id\n",
-    "        \n",
+    "\n",
     "        ex_info[\"sources\"] = self.save_sources(ex_info)\n",
     "\n",
     "        self.run_entry = {\n",
@@ -292,13 +291,16 @@
     "        \"\"\"Store new measurements into metrics.csv\"\"\"\n",
     "        metric_frames = [pd.DataFrame(v) for v in metrics_by_name.values()]\n",
     "        metrics = pd.concat(metric_frames).reset_index(drop=True)\n",
-    "        metrics['experiment_id'] = self.experiment_id\n",
-    "        metrics_path = f's3://{self.bucket_name}/{self.metrics_dir}/metrics.csv'\n",
+    "        metrics[\"experiment_id\"] = self.experiment_id\n",
+    "        metrics_path = f\"s3://{self.bucket_name}/{self.metrics_dir}/metrics.csv\"\n",
     "        metrics.to_csv(metrics_path, index=False)\n",
     "\n",
     "    def __eq__(self, other):\n",
     "        if isinstance(other, AWSLakeObserver):\n",
-    "            return self.bucket == other.bucket and self.experiment_dir == other.experiment_dir\n",
+    "            return (\n",
+    "                self.bucket == other.bucket\n",
+    "                and self.experiment_dir == other.experiment_dir\n",
+    "            )\n",
     "        else:\n",
     "            return False"
    ]
@@ -312,16 +314,15 @@
     "try:\n",
     "    observer = AWSLakeObserver(bucket_name, experiment_dir)\n",
     "except ValueError as ve:\n",
-    "    assert('region' in str(ve).lower())\n",
-    "observer = AWSLakeObserver(bucket_name, experiment_dir, region='eu-west-1')\n",
-    "assert(observer.region == 'eu-west-1')\n",
+    "    assert \"region\" in str(ve).lower()\n",
+    "observer = AWSLakeObserver(bucket_name, experiment_dir, region=\"eu-west-1\")\n",
+    "assert observer.region == \"eu-west-1\"\n",
     "# Do not check for missing bucket yet\n",
-    "observer = AWSLakeObserver(missing_bucket, experiment_dir, region='eu-west-1')\n",
+    "observer = AWSLakeObserver(missing_bucket, experiment_dir, region=\"eu-west-1\")\n",
     "try:\n",
-    "    observer = AWSLakeObserver(invalid_bucket, experiment_dir, \n",
-    "                               region='eu-west-1')\n",
+    "    observer = AWSLakeObserver(invalid_bucket, experiment_dir, region=\"eu-west-1\")\n",
     "except ValueError as ve:\n",
-    "    assert('naming' in str(ve).lower())"
+    "    assert \"naming\" in str(ve).lower()"
    ]
   },
   {
@@ -333,26 +334,30 @@
     "from sacred import Experiment\n",
     "from sacred.run import Run\n",
     "\n",
-    "ex = Experiment('test-lake-obs', interactive=True)\n",
+    "ex = Experiment(\"test-lake-obs\", interactive=True)\n",
     "\n",
-    "test_key_prefix = 'discovery/experiments/test/'\n",
-    "obs = AWSLakeObserver(bucket_name='s3bawspprwe1chatbotunpub01', \n",
-    "                   experiment_dir=f'{test_key_prefix}lake_observer',\n",
-    "                   region='eu-west-1')\n",
+    "test_key_prefix = \"discovery/experiments/test/\"\n",
+    "obs = AWSLakeObserver(\n",
+    "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
+    "    experiment_dir=f\"{test_key_prefix}lake_observer\",\n",
+    "    region=\"eu-west-1\",\n",
+    ")\n",
     "\n",
     "ex.observers.append(obs)\n",
+    "\n",
     "\n",
     "@ex.config\n",
     "def my_config():\n",
     "    recipient = \"test\"\n",
-    "    message = \"Hello %s!\" % recipient\n",
+    "    \"Hello %s!\" % recipient\n",
+    "\n",
     "\n",
     "@ex.main\n",
     "def my_main(message, _run: Run):\n",
-    "    _run.add_artifact('data/requirements.txt')\n",
-    "    _run.add_artifact('data/dataframe_artifact.csv')\n",
-    "    _run.log_scalar('rsme', 1.79, 0)\n",
-    "    _run.log_scalar('another one', 9.12, 0)\n",
+    "    _run.add_artifact(\"data/requirements.txt\")\n",
+    "    _run.add_artifact(\"data/dataframe_artifact.csv\")\n",
+    "    _run.log_scalar(\"rsme\", 1.79, 0)\n",
+    "    _run.log_scalar(\"another one\", 9.12, 0)\n",
     "    print(message)"
    ]
   },
@@ -399,7 +404,8 @@
    "outputs": [],
    "source": [
     "import boto3\n",
-    "s3_res = boto3.resource('s3')"
+    "\n",
+    "s3_res = boto3.resource(\"s3\")"
    ]
   },
   {
@@ -491,7 +497,9 @@
     "            \"s3://<bucket>/path/to/exp\"\n",
     "        )\n",
     "    bucket_name, experiment_dir = match_obj.groups()\n",
-    "    run.observers.append(AWSLakeObserver(bucket_name=bucket_name, experiment_dir=experiment_dir))"
+    "    run.observers.append(\n",
+    "        AWSLakeObserver(bucket_name=bucket_name, experiment_dir=experiment_dir)\n",
+    "    )"
    ]
   }
  ],
