--- a/experiments/s3_utils.ipynb
+++ b/experiments/s3_utils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,28 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
-    "import socket\n",
+    "\n",
     "import os\n",
     "import re\n",
+    "import socket\n",
     "\n",
     "import boto3\n",
-    "from botocore.errorfactory import ClientError\n",
     "from botocore.client import Config\n",
+    "from botocore.errorfactory import ClientError\n",
     "from botocore.exceptions import ConnectTimeoutError"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
+    "\n",
+    "\n",
     "def is_valid_bucket(bucket_name):\n",
     "    # See https://docs.aws.amazon.com/awscloudtrail/latest/userguide/\n",
     "    # cloudtrail-s3-bucket-naming-requirements.html\n",
@@ -69,44 +72,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(is_valid_bucket('some.bucket.name'))\n",
-    "assert(is_valid_bucket('somebucketname'))\n",
-    "assert(not is_valid_bucket('path/sep'))\n",
-    "assert(not is_valid_bucket('snake_case'))"
+    "assert is_valid_bucket(\"some.bucket.name\")\n",
+    "assert is_valid_bucket(\"somebucketname\")\n",
+    "assert not is_valid_bucket(\"path/sep\")\n",
+    "assert not is_valid_bucket(\"snake_case\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
+    "\n",
+    "\n",
     "def s3_join(*args):\n",
     "    return os.path.join(*args).replace(\"\\\\\", \"/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert('windows\\path\\key'.replace(\"\\\\\", \"/\") == 'windows/path/key')\n",
+    "assert \"windows\\path\\key\".replace(\"\\\\\", \"/\") == \"windows/path/key\"\n",
     "path_a = s3_join(\"some/path\", \"artifacts\", \"runs.json\")\n",
     "path_b = s3_join(\"some/path/\", \"artifacts\", \"runs.json\")\n",
     "path_c = s3_join(\"some/path/\", \"artifacts/\", \"runs.json\")\n",
     "expected = \"some/path/artifacts/runs.json\"\n",
-    "assert(path_a == path_b == path_c == expected)"
+    "assert path_a == path_b == path_c == expected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,29 +124,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bucket_name = 's3bawspprwe1chatbotunpub01'\n",
-    "missing_bucket = 'nobuckethere'\n",
-    "invalid_bucket = 'invalid_bucket_name'\n",
-    "experiment_dir = 'discovery/experiments/lake_test'"
+    "bucket_name = \"s3bawspprwe1chatbotunpub01\"\n",
+    "missing_bucket = \"nobuckethere\"\n",
+    "invalid_bucket = \"invalid_bucket_name\"\n",
+    "experiment_dir = \"discovery/experiments/lake_test\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = Config(connect_timeout=5, read_timeout=5, retries={'max_attempts': 0})\n",
-    "s3_res = boto3.resource('s3', config=config)"
+    "config = Config(connect_timeout=5, read_timeout=5, retries={\"max_attempts\": 0})\n",
+    "s3_res = boto3.resource(\"s3\", config=config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,17 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(not objects_exist_in_dir(s3_res, bucket_name, '/non'))\n",
-    "assert(objects_exist_in_dir(s3_res, bucket_name, experiment_dir))"
+    "assert not objects_exist_in_dir(s3_res, bucket_name, \"/non\")\n",
+    "assert objects_exist_in_dir(s3_res, bucket_name, experiment_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,34 +186,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20 ms, sys: 4 ms, total: 24 ms\n",
-      "Wall time: 5.12 s\n"
+      "CPU times: user 8 ms, sys: 0 ns, total: 8 ms\n",
+      "Wall time: 5.05 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "assert(bucket_exists(s3_res, bucket_name))\n",
+    "assert bucket_exists(s3_res, bucket_name)\n",
     "try:\n",
     "    bucket_exists(s3_res, missing_bucket)\n",
     "except ConnectTimeoutError:\n",
     "    pass\n",
     "try:\n",
-    "    assert(bucket_exists(s3_res, invalid_bucket))\n",
+    "    assert bucket_exists(s3_res, invalid_bucket)\n",
     "except ValueError:\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,25 +235,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(len(list_s3_subdirs(s3_res, bucket_name, experiment_dir)) > 0)\n",
-    "assert(len(list_s3_subdirs(s3_res, bucket_name, s3_join(experiment_dir, 'artifacts'))) > 0)\n",
-    "assert(len(list_s3_subdirs(s3_res, bucket_name, s3_join(experiment_dir, 'metrics'))) > 0)\n",
-    "assert(len(list_s3_subdirs(s3_res, bucket_name, s3_join(experiment_dir, 'runs'))) > 0)\n",
-    "assert(len(list_s3_subdirs(s3_res, bucket_name, s3_join(experiment_dir, 'sources'))) > 0)"
+    "assert len(list_s3_subdirs(s3_res, bucket_name, experiment_dir)) > 0\n",
+    "assert (\n",
+    "    len(list_s3_subdirs(s3_res, bucket_name, s3_join(experiment_dir, \"artifacts\"))) > 0\n",
+    ")\n",
+    "assert len(list_s3_subdirs(s3_res, bucket_name, s3_join(experiment_dir, \"metrics\"))) > 0\n",
+    "assert len(list_s3_subdirs(s3_res, bucket_name, s3_join(experiment_dir, \"runs\"))) > 0\n",
+    "assert len(list_s3_subdirs(s3_res, bucket_name, s3_join(experiment_dir, \"sources\"))) > 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
+    "\n",
+    "\n",
     "import io\n",
+    "\n",
     "\n",
     "# Copied from: https://alexwlchan.net/2019/02/working-with-large-s3-objects/\n",
     "class S3File(io.RawIOBase):\n",
@@ -274,9 +284,9 @@
     "        elif whence == io.SEEK_END:\n",
     "            self.position = self.size + offset\n",
     "        else:\n",
-    "            raise ValueError(\"invalid whence (%r, should be %d, %d, %d)\" % (\n",
-    "                whence, io.SEEK_SET, io.SEEK_CUR, io.SEEK_END\n",
-    "            ))\n",
+    "            raise ValueError(\n",
+    "                f\"invalid whence ({whence}, should be {io.SEEK_SET}, io.SEEK_CUR {io.SEEK_END})\"\n",
+    "            )\n",
     "\n",
     "        return self.position\n",
     "\n",
