--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sciflow\n",
+    "# Sciflow 🔬\n",
     "\n",
     "> This library bridges the gap between research and production for Data Science. The exploration driven development is a different paradigm to most software engineering exercises. We start by assuming only that there are high levels of uncertainty and that the code needs not only to work but to be well conditioned to real data. `sciflow` mixes the strengths of the notebook environment: flexibility, access to data and constant feedback with the strengths of production-like workflows: resilience and dedicated compute."
    ]
@@ -36,7 +36,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`mamba install sciflow`"
+    "# Boa\n",
+    "`mamba install sciflow`\n",
+    "# Conda\n",
+    "`conda install sciflow`\n",
+    "# Pip\n",
+    "`pip install sciflow`"
    ]
   },
   {
@@ -95,6 +100,8 @@
     "* sciflow_build_lib\n",
     "* sciflow_prepare\n",
     "* sciflow_build\n",
+    "* sciflow_generate\n",
+    "* sciflow_check_flows\n",
     "* sciflow_release"
    ]
   },
