--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,15 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "import os\n",
+    "import subprocess\n",
     "from pathlib import Path\n",
     "from typing import Iterable\n",
-    "import subprocess\n",
     "\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.export import Config, find_default_export, nbglob, read_nb\n",
@@ -43,18 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -62,19 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "nb_path = Path(os.path.join(\"test\", \"test_export.ipynb\"))\n",
     "nb = read_nb(nb_path)\n",
-    "module_name = find_default_export(nb[\"cells\"]).replace('.', '/')\n",
+    "module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
     "test_module = os.path.join(Config().path(\"lib_path\"), f\"{module_name}.py\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,15 +180,17 @@
     "\n",
     "\n",
     "def nb_to_metaflow(nb_path: Path, flow_path: Path, silent=True):\n",
-    "    print(nb_path)\n",
     "    nb = read_nb(nb_path)\n",
     "    lib_name = Config().lib_name\n",
     "    module_name = find_default_export(nb[\"cells\"])\n",
     "    if not module_name:\n",
     "        return\n",
-    "    module_name = module_name.replace('.', '/')\n",
+    "    module_name = module_name\n",
+    "    path_sep_module_name = module_name.replace(\".\", \"/\")\n",
     "    nb_name = os.path.basename(nb_path)\n",
-    "    exported_module = os.path.join(Config().path(\"lib_path\"), f\"{module_name}.py\")\n",
+    "    exported_module = os.path.join(\n",
+    "        Config().path(\"lib_path\"), f\"{path_sep_module_name}.py\"\n",
+    "    )\n",
     "    steps = extract_steps(exported_module)\n",
     "    if len(steps) == 0:\n",
     "        return\n",
@@ -200,7 +200,7 @@
     "    params = params_as_dict(nb_path)\n",
     "    if len(params) == 0:\n",
     "        print(f\"No params cell found for: {os.path.basename(nb_path)}\")\n",
-    "    flow_class_name = f\"{titleize(module_name)}Flow\"\n",
+    "    flow_class_name = f\"{titleize(extract_module_only(module_name))}Flow\"\n",
     "    rename_steps_for_metaflow(steps)\n",
     "    write_module_to_file(\n",
     "        flow_path,\n",
@@ -212,12 +212,51 @@
     "        params,\n",
     "    )\n",
     "    if not silent:\n",
-    "        print(f\"Converted {nb_name} to {flow_class_name} in: {os.path.basename(flow_path)}\")"
+    "        print(\n",
+    "            f\"Converted {nb_name} to {flow_class_name} in: {os.path.basename(flow_path)}\"\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pkg_module_name = \"test.module\"\n",
+    "module_name = \"module\"\n",
+    "path_sep_module_name = module_name.replace(\".\", \"/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def extract_module_only(package_module_name):\n",
+    "    module_name = package_module_name\n",
+    "    if \".\" in module_name:\n",
+    "        package_name, module_name = module_name.split(\".\")\n",
+    "    return module_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert \"module\" == extract_module_only(module_name)\n",
+    "assert \"module\" == extract_module_only(pkg_module_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +298,11 @@
     "                flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
     "            # Check for padded step\n",
     "            if i < len(orig_step_names):\n",
-    "                flow_step_args = \",\".join([\"self.\" + a for a in step.args.split(\",\")])\n",
+    "                flow_step_args = \"\"\n",
+    "                if len(step.args) > 0:\n",
+    "                    flow_step_args = \", \".join(\n",
+    "                        [\"self.\" + a for a in step.args.split(\",\")]\n",
+    "                    )\n",
     "                flow_file.write(\n",
     "                    f\"{single_indent}{single_indent}{orig_step_names[i]}({flow_step_args})\\n\"\n",
     "                )\n",
@@ -277,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +355,7 @@
        "Path('/home/jovyan/git/sciflow/nbs/test/flows/test.test_export.py')"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,15 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test/test_export.ipynb\n",
-      "Converted test_export.ipynb to Test/TestExportFlow in: test.test_export.py\n"
+      "Converted test_export.ipynb to TestExportFlow in: test.test_export.py\n"
      ]
     }
    ],
@@ -348,24 +390,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "packaging.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb_to_metaflow(\"packaging.ipynb\", flow_path, silent=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,31 +418,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/git/sciflow/nbs/metaflow.ipynb\n",
-      "/home/jovyan/git/sciflow/nbs/build.ipynb\n",
-      "/home/jovyan/git/sciflow/nbs/utils.ipynb\n",
-      "/home/jovyan/git/sciflow/nbs/parse_module.ipynb\n",
-      "/home/jovyan/git/sciflow/nbs/scilint.ipynb\n",
-      "/home/jovyan/git/sciflow/nbs/export_named.ipynb\n",
-      "/home/jovyan/git/sciflow/nbs/packaging.ipynb\n",
-      "/home/jovyan/git/sciflow/nbs/params.ipynb\n",
-      "/home/jovyan/git/sciflow/nbs/index.ipynb\n",
-      "/home/jovyan/git/sciflow/nbs/data_handlers.ipynb\n",
-      "/home/jovyan/git/sciflow/nbs/test/test_export.ipynb\n",
-      "Converted test_export.ipynb to Test/TestExportFlow in: test_export.py\n",
-      "/home/jovyan/git/sciflow/nbs/test/test_pandas_numpy.ipynb\n",
-      "Converted test_pandas_numpy.ipynb to Test/TestPandasNumpyFlow in: test_pandas_numpy.py\n",
-      "/home/jovyan/git/sciflow/nbs/test/test_top2vec.ipynb\n",
-      "Converted test_top2vec.ipynb to Test/TestTop2VecFlow in: test_top2vec.py\n",
-      "/home/jovyan/git/sciflow/nbs/test/test_module.ipynb\n",
-      "Converted test_module.ipynb to Test/TestModuleFlow in: test_module.py\n"
+      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
+      "Converted test_pandas_numpy.ipynb to TestPandasNumpyFlow in: test_pandas_numpy.py\n",
+      "Converted test_top2vec.ipynb to TestTop2VecFlow in: test_top2vec.py\n",
+      "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n"
      ]
     }
    ],
@@ -418,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,75 +452,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def check_flows(config):\n",
     "    flow_results = {}\n",
-    "    flows_dir = config.path('flows_path')\n",
+    "    flows_dir = config.path(\"flows_path\")\n",
     "    for flow_path in os.listdir(flows_dir):\n",
     "        flow_name = os.path.basename(flow_path)\n",
-    "        if flow_path.endswith('.py'):\n",
+    "        if flow_path.endswith(\".py\"):\n",
     "            ret_code, output = check_flow(flows_dir, flow_path)\n",
     "            flow_results[flow_name] = ret_code, output\n",
     "            if ret_code == 0:\n",
-    "                print(f'Flow: {flow_name} verified')\n",
+    "                print(f\"Flow: {flow_name} verified\")\n",
     "            else:\n",
-    "                print(f'Flow: {flow_name} verification failed\\nDetails:\\n{output}')"
+    "                print(f\"Flow: {flow_name} verification failed\\nDetails:\\n{output}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def check_flow(flows_dir, flow_module):\n",
+    "    if \"USER\" not in os.environ:\n",
+    "        try:\n",
+    "            os.environ[\"USER\"] = os.environ[\"GIT_COMMITTER_NAME\"]\n",
+    "        except KeyError:\n",
+    "            raise EnvironmentError(\n",
+    "                \"Metaflow requires a known user for tracked execution. Add USER or GIT_COMMITTER_NAME to Jupyter environment variables\"\n",
+    "            )\n",
     "    script = f\"python '{os.path.join(flows_dir, flow_module)}' show\"\n",
-    "    pipe = subprocess.Popen(\"%s\" % script, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, shell=True)\n",
+    "    pipe = subprocess.Popen(\n",
+    "        \"%s\" % script, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, shell=True\n",
+    "    )\n",
     "    output = pipe.communicate()[0]\n",
-    "    return pipe.returncode, output.decode('utf-8').strip()"
+    "    return pipe.returncode, output.decode(\"utf-8\").strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Flow: test_module.py verification failed\n",
-      "Details:\n",
-      "File \"/home/jovyan/git/sciflow/nbs/test/flows/test_module.py\", line 3\n",
-      "    from sciflow.test/test_module import first\n",
-      "                     ^\n",
-      "SyntaxError: invalid syntax\n",
-      "Flow: test_top2vec.py verification failed\n",
-      "Details:\n",
-      "File \"/home/jovyan/git/sciflow/nbs/test/flows/test_top2vec.py\", line 3\n",
-      "    from sciflow.test/test_top2vec import something, preprocess, fit, evaluate\n",
-      "                     ^\n",
-      "SyntaxError: invalid syntax\n",
+      "Flow: test_module.py verified\n",
+      "Flow: test.test_export.py verified\n",
+      "Flow: test_top2vec.py verified\n",
       "Flow: test_pandas_numpy.py verification failed\n",
       "Details:\n",
-      "File \"/home/jovyan/git/sciflow/nbs/test/flows/test_pandas_numpy.py\", line 3\n",
-      "    from sciflow.test/test_pandas_numpy import first, preprocess, train, last\n",
-      "                     ^\n",
-      "SyntaxError: invalid syntax\n",
-      "Flow: test_export.py verification failed\n",
-      "Details:\n",
-      "File \"/home/jovyan/git/sciflow/nbs/test/flows/test_export.py\", line 3\n",
-      "    from sciflow.test/test_export import first, preprocess, train, last\n",
-      "                     ^\n",
-      "SyntaxError: invalid syntax\n"
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jovyan/git/sciflow/nbs/test/flows/test_pandas_numpy.py\", line 3, in <module>\n",
+      "    from sciflow.test.test_pandas_numpy import first, preprocess, train, last\n",
+      "  File \"/home/jovyan/git/sciflow/sciflow/test/test_pandas_numpy.py\", line 13, in <module>\n",
+      "    some_params = pd.Series([1, 2, 3])\n",
+      "NameError: name 'pd' is not defined\n",
+      "Flow: test_export.py verified\n"
      ]
     }
    ],
    "source": [
     "check_flows(Config(cfg_name=\"test/settings.ini\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "@call_parse\n",
+    "def sciflow_check_flows():\n",
+    "    check_flows(Config())"
    ]
   },
   {
