--- a/nbs/test/test_top2vec.ipynb
+++ b/nbs/test/test_top2vec.ipynb
@@ -18,8 +18,9 @@
    "source": [
     "# exportn_step:first\n",
     "\n",
+    "\n",
     "def something():\n",
-    "    import pandas as pd"
+    "    pass"
    ]
   },
   {
@@ -66,14 +67,12 @@
     "# export\n",
     "\n",
     "import logging\n",
-    "import os\n",
     "\n",
     "import gensim\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from data_access.dremio_access import DremioAccess\n",
-    "from top2vec import Top2Vec\n",
     "from sciflow.utils import load_dremio_access\n",
+    "from top2vec import Top2Vec\n",
     "\n",
     "gensim.logger.setLevel(logging.WARN)"
    ]
@@ -290,6 +289,7 @@
    "source": [
     "# exportn_step:fit\n",
     "\n",
+    "\n",
     "def fit(documents, workers=workers, speed=\"fast-learn\"):\n",
     "    return Top2Vec(documents, workers=workers, speed=speed)"
    ]
@@ -504,6 +504,7 @@
    "outputs": [],
    "source": [
     "# exportn_step:evaluate\n",
+    "\n",
     "\n",
     "def evaluate(model):\n",
     "    topic_words, word_scores, topic_nums = model.get_topics(model.get_num_topics())\n",
