--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -25,7 +25,9 @@
    "source": [
     "# export\n",
     "\n",
-    "import subprocess, os\n",
+    "import os\n",
+    "import subprocess\n",
+    "\n",
     "from data_access.dremio_access import DremioAccess"
    ]
   },
@@ -56,15 +58,16 @@
    "source": [
     "# export\n",
     "\n",
+    "\n",
     "def shell_source(script):\n",
     "    \"\"\"Sometime you want to emulate the action of \"source\" in bash,\n",
     "    settings some environment variables. Here is a way to do it.\n",
     "    From: https://stackoverflow.com/questions/7040592/calling-the-source-command-from-subprocess-popen\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    pipe = subprocess.Popen(\". %s; env\" % script, stdout=subprocess.PIPE, shell=True)\n",
     "    output = pipe.communicate()[0]\n",
-    "    env = dict((line.split(\"=\", 1) for line in output.decode('utf-8').splitlines()))\n",
+    "    env = dict((line.split(\"=\", 1) for line in output.decode(\"utf-8\").splitlines()))\n",
     "    os.environ.update(env)"
    ]
   },
@@ -74,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shell_source('/home/jovyan/.profile')"
+    "shell_source(\"/home/jovyan/.profile\")"
    ]
   },
   {
@@ -85,10 +88,11 @@
    "source": [
     "# export\n",
     "\n",
+    "\n",
     "def load_dremio_access():\n",
-    "    shell_source('/home/jovyan/.profile')\n",
-    "    if 'DREMIO_PWD' in os.environ:\n",
-    "        DremioAccess._get_dremio_password = lambda x: os.environ['DREMIO_PWD']\n",
+    "    shell_source(\"/home/jovyan/.profile\")\n",
+    "    if \"DREMIO_PWD\" in os.environ:\n",
+    "        DremioAccess._get_dremio_password = lambda x: os.environ[\"DREMIO_PWD\"]\n",
     "    return DremioAccess()"
    ]
   },
